# wrela7

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Cargo.toml  README.md  rustfmt.toml  slate.json
.cargo/: config.toml
.cursor/: environment.json  install.sh
benchmarks/: CMakeLists.txt  LexerBenchmark.cpp
cmake/: WrelaCompilerOptions.cmake
crates/: README.md
crates/wrela-backend/: Cargo.toml
crates/wrela-backend-protocol/: Cargo.toml
crates/wrela-backend/src/: lib.rs  main.rs
crates/wrela-backend/tests/: backend_process.rs
crates/wrela-build-model/: Cargo.toml
crates/wrela-cli/: Cargo.toml
crates/wrela-cli/src/: main.rs
crates/wrela-cli/tests/: check_cli.rs
crates/wrela-codegen-llvm/: Cargo.toml
crates/wrela-codegen-llvm/src/: coff.rs  ir.rs  lib.rs  native.rs  validate.rs
crates/wrela-compiler/: Cargo.toml
crates/wrela-compiler/src/: analysis_facts.rs  cache.rs  engine.rs  incremental.rs  input.rs  lib.rs  local_build.rs  local_check.rs  local_doctor.rs  local_format.rs  local_lint.rs  local_test.rs
crates/wrela-compiler/tests/: actor_cross_send_vertical.rs  actor_flow_vertical.rs  actor_one_way_send_diagnostics.rs  actor_one_way_send_vertical.rs  actor_state_storage_vertical.rs  artifact_cache_reuse.rs  async_exit_flow_vertical.rs  bounded_while_vertical.rs  build_planner.rs  change_set_reuse.rs  checked_shift_vertical.rs  closed_range_vertical.rs  compound_assignment_vertical.rs  comptime_aggregate_vertical.rs  comptime_unit_vertical.rs  elif_vertical.rs  fixed_array_iteration_vertical.rs  headless_check.rs  incremental_session.rs  runtime_flat_structure_vertical.rs  runtime_result_vertical.rs  runtime_timeout_vertical.rs  scope_cleanup_vertical.rs  static_bytes_native_vertical.rs  stdlib_time_runtime_vertical.rs  stdlib_time_scalar.rs  wait_for_graph_vertical.rs
crates/wrela-diagnostics/: Cargo.toml
crates/wrela-diagnostics/src/: lib.rs
crates/wrela-driver/: Cargo.toml
crates/wrela-driver/src/: engine.rs  lib.rs
crates/wrela-driver/tests/: engine_contract.rs  layer_contracts.rs
crates/wrela-driver/tests/contracts/engine/v1/: empty-check-output.contract
crates/wrela-engine/: Cargo.toml
crates/wrela-engine/src/: lib.rs  main.rs
crates/wrela-engine/tests/: process.rs
crates/wrela-flow-lower/: Cargo.toml
crates/wrela-flow-lower/src/: lib.rs
crates/wrela-flow-opt/: Cargo.toml
crates/wrela-flow-opt/src/: development.rs  lib.rs
crates/wrela-flow-wir/: Cargo.toml
crates/wrela-flow-wir-codec/: Cargo.toml
crates/wrela-flow-wir-codec/src/: canonical.rs  lib.rs
crates/wrela-flow-wir/src/: lib.rs
crates/wrela-format/: Cargo.toml
crates/wrela-format/src/: lib.rs
crates/wrela-hir/: Cargo.toml
crates/wrela-hir-lower/: Cargo.toml
crates/wrela-hir-lower/src/: lib.rs  lower.rs
crates/wrela-hir/src/: lib.rs
crates/wrela-image-report/: Cargo.toml
crates/wrela-image-report/src/: decode.rs  lib.rs
crates/wrela-link-efi/: Cargo.toml
crates/wrela-link-efi/src/: inspect.rs  lib.rs
crates/wrela-lint/: Cargo.toml
crates/wrela-lint/src/: lib.rs
crates/wrela-lld-sys/: Cargo.toml  build.rs
crates/wrela-lld-sys/src/: archive.rs  lib.rs  lld_shim.cpp
crates/wrela-machine-lower/: Cargo.toml
crates/wrela-machine-lower/src/: equality.rs  lib.rs  scalar.rs
crates/wrela-machine-wir/: Cargo.toml
crates/wrela-machine-wir/src/: lib.rs
crates/wrela-package/: Cargo.toml
crates/wrela-package-loader/: Cargo.toml
crates/wrela-package-loader/examples/: canonicalize_manifest.rs  regenerate_lockfile.rs
crates/wrela-package-loader/src/: codec.rs  lib.rs  loader.rs  sha256.rs
crates/wrela-package/src/: lib.rs
crates/wrela-runtime-abi/: Cargo.toml
crates/wrela-sema/: Cargo.toml
crates/wrela-sema/src/: analyzer.rs  comptime_check.rs  interfaces.rs  lib.rs
crates/wrela-semantic-lower/: Cargo.toml
crates/wrela-semantic-lower/src/: lib.rs
crates/wrela-semantic-wir/: Cargo.toml
crates/wrela-semantic-wir/src/: lib.rs
crates/wrela-source/: Cargo.toml
crates/wrela-syntax/: Cargo.toml
crates/wrela-target/: Cargo.toml
crates/wrela-test-model/: Cargo.toml
crates/wrela-test-protocol/: Cargo.toml
crates/wrela-test-runner/: Cargo.toml
crates/wrela-toolchain/: Cargo.toml
crates/wrela-wir/: Cargo.toml
crates/wrela-wir-codec/: Cargo.toml
crates/wrela-wir-lower/: Cargo.toml
crates/wrela-wir-passes/: Cargo.toml
docs/: README.md  architecture.md  codex-branch-triage.md  crate-contracts.md  image-runtime.md  implementation-plan.md  requirements-to-tests.md  runtime-platform.md  toolchain-architecture.md  verification.md
docs/adr/: 0001-native-backend.md
docs/design/: linux-engine-host-launchers.md  loom-intelligence.md  ui-field-substrate.md
docs/designs/: lexing-and-wr-source-consumption.md
docs/implementation/: lexing-and-wr-source-consumption.md
docs/language/: 01-foundations.md  02-source-language.md  03-values-views-regions.md  04-actors-and-async.md  05-hardware-safety.md  06-comptime-and-images.md  07-faults-and-reliability.md  08-build-contract.md  09-optimization-model.md  10-standard-library-contracts.md  README.md  conformance-inventory.md  core-model.md  design-decisions.md  (+2 more)
lib/: CMakeLists.txt
lib/Basic/: Version.cpp
lib/Diagnostics/: Diagnostic.cpp
lib/Driver/: Driver.cpp
lib/IR/: MLIRSupport.cpp
lib/Lex/: Lexer.cpp
lib/Source/: SourceBuffer.cpp
std/: README.md
test/: CMakeLists.txt  check-empty.wrela  lit.cfg.py  version.wrela
toolchain/: README.md  cargo.outputs.toml  com.wrela.nightly.plist  emulation.lock.toml  emulation.outputs.toml  linux-engine.lock.toml  linux-engine.outputs.toml  llvm.lock.toml  llvm.outputs.toml  rust.outputs.toml
tools/: CMakeLists.txt  format.sh  lint.sh
unittests/: CMakeLists.txt
unittests/Basic/: VersionTest.cpp
unittests/Diagnostics/: DiagnosticEngineTest.cpp
unittests/IR/: MLIRSupportTest.cpp
unittests/Lex/: LexerTest.cpp
unittests/Source/: SourceBufferTest.cpp
xtask/: Cargo.toml
xtask/src/: dist.rs  linux_engine.rs  llvm.rs  main.rs  qemu.rs
(+120 files in other folders)
