add_library(wrela_basic Basic/Version.cpp)
add_library(wrela::basic ALIAS wrela_basic)
wrela_target_defaults(wrela_basic)
wrela_target_include_dirs(wrela_basic)
target_compile_definitions(wrela_basic PRIVATE WRELA_VERSION="${PROJECT_VERSION}")

add_library(wrela_diagnostics Diagnostics/Diagnostic.cpp)
add_library(wrela::diagnostics ALIAS wrela_diagnostics)
wrela_target_defaults(wrela_diagnostics)
wrela_target_include_dirs(wrela_diagnostics)
target_link_libraries(wrela_diagnostics PUBLIC wrela::basic)

add_library(wrela_source Source/SourceBuffer.cpp)
add_library(wrela::source ALIAS wrela_source)
wrela_target_defaults(wrela_source)
wrela_target_include_dirs(wrela_source)
target_link_libraries(wrela_source PUBLIC wrela::diagnostics)

add_library(wrela_lex Lex/Lexer.cpp)
add_library(wrela::lex ALIAS wrela_lex)
wrela_target_defaults(wrela_lex)
wrela_target_include_dirs(wrela_lex)
target_link_libraries(wrela_lex PUBLIC wrela::source)

add_library(wrela_ir IR/MLIRSupport.cpp)
add_library(wrela::ir ALIAS wrela_ir)
wrela_target_defaults(wrela_ir)
wrela_target_include_dirs(wrela_ir)
target_include_directories(wrela_ir SYSTEM PUBLIC ${LLVM_INCLUDE_DIRS} ${MLIR_INCLUDE_DIRS})
target_compile_definitions(wrela_ir PUBLIC ${LLVM_DEFINITIONS})
target_link_libraries(wrela_ir PUBLIC wrela::basic MLIRIR MLIRSupport LLVMSupport)

add_library(wrela_driver Driver/Driver.cpp)
add_library(wrela::driver ALIAS wrela_driver)
wrela_target_defaults(wrela_driver)
wrela_target_include_dirs(wrela_driver)
target_link_libraries(wrela_driver PUBLIC wrela::basic wrela::source wrela::diagnostics wrela::lex wrela::ir)
