[package]
name = "xtask"
description = "Maintainer tasks for building and packaging the wrela toolchain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
serde_json = "1"

[lints]
workspace = true
