[package]
name = "wrela-cli"
description = "Command-line entry point for the self-contained wrela toolchain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "wrela"
path = "src/main.rs"

[dependencies]
wrela-driver = { path = "../wrela-driver" }

[lints]
workspace = true
