[package]
name = "wrela-cli"
description = "Command-line entry point for the self-contained wrela toolchain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "wrela"
path = "src/main.rs"

[dependencies]
wrela-build-model = { path = "../wrela-build-model" }
wrela-compiler = { path = "../wrela-compiler" }
wrela-driver = { path = "../wrela-driver" }

[dev-dependencies]
wrela-package = { path = "../wrela-package" }
wrela-package-loader = { path = "../wrela-package-loader" }
wrela-test-model = { path = "../wrela-test-model" }
wrela-toolchain = { path = "../wrela-toolchain" }

[lints]
workspace = true
