[package]
name = "wrela-codegen-llvm"
description = "Translation from verified wrela WIR into LLVM and native object files"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[features]
default = []
llvm = ["dep:inkwell"]

[dependencies]
wrela-target = { path = "../wrela-target" }
wrela-wir-passes = { path = "../wrela-wir-passes" }

[dependencies.inkwell]
version = "=0.9.0"
optional = true
default-features = false
features = ["llvm22-1-force-static", "target-x86"]

[lints]
workspace = true

