[package]
name = "wrela-codegen-llvm"
description = "Mechanical translation from validated MachineWir into AArch64 COFF"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[features]
default = []
llvm = ["dep:inkwell"]

[dependencies]
wrela-build-model = { path = "../wrela-build-model" }
wrela-machine-wir = { path = "../wrela-machine-wir" }
wrela-target = { path = "../wrela-target" }

[dependencies.inkwell]
version = "=0.9.0"
optional = true
default-features = false
features = ["llvm22-1-force-static", "target-aarch64"]

[lints]
workspace = true
