[package]
name = "wrela-driver"
description = "Command orchestration for the wrela toolchain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
wrela-build-model = { path = "../wrela-build-model" }
wrela-diagnostics = { path = "../wrela-diagnostics" }
wrela-format = { path = "../wrela-format" }
wrela-image-report = { path = "../wrela-image-report" }
wrela-lint = { path = "../wrela-lint" }
wrela-source = { path = "../wrela-source" }
wrela-test-model = { path = "../wrela-test-model" }

[lints]
workspace = true
