[package]
name = "wrela-engine"
description = "Headless sealed-request Wrela compiler engine process"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "wrela-engine"
path = "src/main.rs"

[dependencies]
wrela-build-model = { path = "../wrela-build-model" }
wrela-compiler = { path = "../wrela-compiler" }
wrela-driver = { path = "../wrela-driver" }
wrela-toolchain = { path = "../wrela-toolchain" }

[dev-dependencies]
wrela-package = { path = "../wrela-package" }
wrela-package-loader = { path = "../wrela-package-loader" }

[lints]
workspace = true
