[package]
name = "wrela-flow-lower"
description = "Lowering from SemanticWir to typed SSA FlowWir"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
wrela-diagnostics = { path = "../wrela-diagnostics" }
wrela-flow-wir = { path = "../wrela-flow-wir" }
wrela-semantic-wir = { path = "../wrela-semantic-wir" }

[dev-dependencies]
wrela-build-model = { path = "../wrela-build-model" }
wrela-source = { path = "../wrela-source" }
wrela-test-model = { path = "../wrela-test-model" }
wrela-test-protocol = { path = "../wrela-test-protocol" }

[lints]
workspace = true
