[package]
name = "wrela-flow-opt"
description = "Verified semantics-preserving whole-image FlowWir optimization"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
wrela-build-model = { path = "../wrela-build-model" }
wrela-flow-wir = { path = "../wrela-flow-wir" }
wrela-test-model = { path = "../wrela-test-model" }

[dev-dependencies]
wrela-flow-lower = { path = "../wrela-flow-lower" }
wrela-semantic-wir = { path = "../wrela-semantic-wir" }
wrela-source = { path = "../wrela-source" }

[lints]
workspace = true
