[package]
name = "wrela-flow-wir"
description = "Typed SSA whole-image flow IR for wrela"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
wrela-build-model = { path = "../wrela-build-model" }
wrela-source = { path = "../wrela-source" }

[lints]
workspace = true
