[package]
name = "wrela-hir"
description = "Backend-neutral high-level representation of resolved wrela programs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
wrela-package = { path = "../wrela-package" }
wrela-source = { path = "../wrela-source" }

[dev-dependencies]
wrela-build-model = { path = "../wrela-build-model" }

[lints]
workspace = true
