[package]
name = "wrela-image-report"
description = "Machine-readable image report contract and readable renderer for wrela builds"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
wrela-target = { path = "../wrela-target" }

[lints]
workspace = true

