[package]
name = "wrela-image-report"
description = "Machine-readable image report contract and readable renderer for wrela builds"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
wrela-build-model = { path = "../wrela-build-model" }
wrela-source = { path = "../wrela-source" }
wrela-test-model = { path = "../wrela-test-model" }

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
