[package]
name = "wrela-lld-sys"
description = "Private raw ABI boundary to the pinned bundled LLD COFF driver"
build = "build.rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[features]
default = []
bundled-lld = []

[lints]
workspace = true
