[package]
name = "wrela-lld-sys"
description = "Private boundary that shells out to the system lld-link COFF driver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[features]
default = []
bundled-lld = []

[lints]
workspace = true
