[package]
name = "wrela-package-loader"
description = "Hermetic manifest and source graph loading for wrela"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
toml = { version = "=0.9.9", default-features = false, features = ["parse", "std"] }
toml_parser = { version = "=1.0.5", default-features = false, features = ["alloc", "std"] }
wrela-build-model = { path = "../wrela-build-model" }
wrela-package = { path = "../wrela-package" }
wrela-source = { path = "../wrela-source" }

[lints]
workspace = true
