[package]
name = "wrela-sema"
description = "Whole-image type, effect, ownership, region, actor, capacity, and hardware analysis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
wrela-build-model = { path = "../wrela-build-model" }
wrela-diagnostics = { path = "../wrela-diagnostics" }
wrela-hir = { path = "../wrela-hir" }
wrela-source = { path = "../wrela-source" }
wrela-target = { path = "../wrela-target" }
wrela-test-model = { path = "../wrela-test-model" }

[lints]
workspace = true
